--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/udon.html">Udon</a>
+    <ul>
+  <li><a href="./recipes/udon.html">Udon</a></li>
+    <li><a href="./recipes/teriyaki-chicken.html">Teriyaki Chicken</a></li>
+    <li><a href="./recipes/miso-soup.html">Miso Soup</a></li>
+    </ul>
 </body>
 </html>
